Add Docker Compose setup and improve security/configuration
## Docker 환경 구성 (신규 파일)

### docker-compose.yml
- oracle-db / backend / frontend 3개 서비스 정의
- oracle-db: gvenzl/oracle-xe:21-slim-faststart 이미지 사용
  - healthcheck 설정으로 DB 준비 완료 후 backend 기동
  - oracle-data named volume으로 컨테이너 재시작 후에도 데이터 유지
  - 로컬 Oracle 리스너(1521 점유)와 충돌 방지를 위해 외부 포트 1522 사용
- backend: Oracle healthy 상태 확인 후 기동 (depends_on condition)
  - expose(내부 전용)로 변경하여 외부 직접 접근 차단, nginx가 유일한 진입점
- frontend: nginx 기반 Vue SPA + /api 역방향 프록시
- 모든 서비스에 restart: unless-stopped 추가 (서버 재부팅 후 자동 복구)
- .env 파일로 비밀번호/설정값 주입 (환경변수 분리)

### bulletin-backend/Dockerfile
- 멀티 스테이지 빌드: eclipse-temurin:21-jdk-noble(빌드) → 21-jre-noble(런타임)
- Java 26 Docker 이미지 미배포 및 Lombok 1.18.36의 Java 25 비호환(TypeTag.UNKNOWN 제거)
  문제로 Java 21 LTS 채택
- Maven dependency 레이어 캐시 최적화 (pom.xml 먼저 COPY)

### bulletin-frontend/Dockerfile
- 멀티 스테이지 빌드: node:20-alpine(빌드) → nginx:alpine(런타임)
- npm ci로 재현 가능한 의존성 설치

### bulletin-frontend/nginx.conf
- Vue Router SPA 폴백 설정 (try_files → index.html)
- /api 경로를 backend:8080으로 역방향 프록시
- 세션 쿠키 전달을 위한 Cookie / Set-Cookie 헤더 포워딩

### docker/oracle/01_schema.sql
- 최초 부팅 시 자동 실행되는 DDL: users / posts / comments 테이블 및 시퀀스 생성

### .env.example
- 환경변수 템플릿 파일 (실제 값 없이 구조만 제공)
- 협업자가 cp .env.example .env 후 값을 채워 사용

## 보안 개선

### .gitignore
- .env 추가 (비밀번호 git 노출 방지)

### SecurityConfig.java
- CORS allowedOrigins 하드코딩("http://localhost:5173") 제거
- @Value("${app.cors.allowed-origins}") 주입 방식으로 변경
- 쉼표 구분으로 다중 도메인 지원

## 빌드 수정

### pom.xml
- java.version: 26 → 21 (LTS, Docker 이미지 가용성 및 Lombok 호환성)
- maven-compiler-plugin에 annotationProcessorPaths 명시
  (Lombok @Getter 등 어노테이션이 Docker 빌드 환경에서 처리되지 않던 문제 해결)

## 설정 개선

### application.yml
- datasource: 환경변수 주입 방식으로 변경 (Docker/로컬 동시 지원)
- hikari connection-timeout / initialization-fail-timeout 추가
- jpa.open-in-view: false 명시 (LazyInitializationException 조기 발견, 성능 개선)
- show-sql: 환경변수 제어 (기본 false, 운영 환경 로그 과다 방지)
- ddl-auto: 환경변수 제어 (운영 배포 시 validate로 전환 가능)
- app.cor